Partial support for Twitter Attachments, Image Attachments, and Web Link Attachments (no GIF support)

--- a/GroupMeClientAvalonia/App.xaml
+++ b/GroupMeClientAvalonia/App.xaml
@@ -25,5 +25,6 @@
     <Application.Styles>
         <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
         <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
+        <StyleInclude Source="/HamburgerMenu.xaml"/>
     </Application.Styles>
 </Application>
