--- a/GroupMeClientAvalonia/Views/Controls/Attachments/TwitterAttachmentControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/Attachments/TwitterAttachmentControl.xaml
@@ -37,8 +37,7 @@
 
         <TextBlock Margin="4,1,0,0">@</TextBlock>
         
-        <!--Padding="0,1,0,0"-->
-        <TextBlock Text="{Binding Handle}" FontSize="12" FontWeight="Light" />
+        <TextBlock Text="{Binding Handle}" FontSize="12" FontWeight="Light" VerticalAlignment="Center" />
       </StackPanel>
 
       <TextBlock FontSize="14" TextWrapping="Wrap" Text="{Binding Text}"  Grid.Column="1" Grid.Row="1" />
