--- a/GroupMeClientAvalonia/Views/Controls/GroupContentsControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/GroupContentsControl.xaml
@@ -8,13 +8,13 @@
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="700"
-             Background="#F7F7F7">
+             Background="{DynamicResource MessageBackdropBrush}">
 
   <Grid ColumnDefinitions="*"
         RowDefinitions="Auto,7,*,Auto">
 
     <!--Top Bar-->
-    <Grid Grid.Column="0" Grid.Row="0" Background="White"
+    <Grid Grid.Column="0" Grid.Row="0" Background="{DynamicResource ThemeBackgroundBrush}"
           ColumnDefinitions="Auto,*,Auto"
           RowDefinitions="50">
 
@@ -30,20 +30,20 @@
                     BorderThickness="0"
                     HorizontalAlignment="Left"
                     FontSize="17" FontWeight="SemiBold"
-                    Background="White"
+                    Background="{DynamicResource ThemeBackgroundBrush}"
                     x:Name="toggleGroupOptionsButton">
 
         <ToggleButton.Styles>
           <Style Selector="ToggleButton:checked /template/ ContentPresenter">
-            <Setter Property="Background" Value="White"/>
+            <Setter Property="Background" Value="{DynamicResource ThemeBackgroundBrush}"/>
           </Style>
           <Style Selector="ToggleButton:pressed /template/ ContentPresenter">
-            <Setter Property="Background" Value="White"/>
+            <Setter Property="Background" Value="{DynamicResource ThemeBackgroundBrush}"/>
           </Style>
         </ToggleButton.Styles>
         
         <!--Toggle Button Content, The Group Name and the Dropdown Arrow-->
-        <Grid ColumnDefinitions="*,Auto" Background="White">
+        <Grid ColumnDefinitions="*,Auto" Background="{DynamicResource ThemeBackgroundBrush}">
           <!--Chat Name Label-->
           <!--TextTrimming="CharacterEllipsis"-->
           <TextBlock Grid.Column="0"
@@ -72,14 +72,14 @@
               HorizontalAlignment="Right"
               Width="35" Height="35"
               BorderThickness="0"
-              Background="White"
+              Background="{DynamicResource ThemeBackgroundBrush}"
               Command="{Binding Path=CloseGroup}"
               CommandParameter="{Binding Path=.}">
         <DrawingPresenter Width="15" Height="15" Drawing="{DynamicResource Material.Close}" />
       </Button>
 
       <!--Top Bar Underline-->
-      <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" BorderBrush="#637182" BorderThickness="0,0,0,1"/>
+      <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" BorderBrush="{DynamicResource DividerLineBrush}" BorderThickness="0,0,0,1"/>
     </Grid>
 
     <!--ItemsSource="{Binding Source={StaticResource MessagesViewSource}}"-->
@@ -97,7 +97,7 @@
     <ListBox Items="{Binding SortedMessages}"
              Grid.Row="2" Grid.Column="0"
              BorderThickness="0"
-             Background="#F7F7F7"
+             Background="{DynamicResource MessageBackdropBrush}"
              VirtualizationMode="None"
              UseLayoutRounding="True"
              SelectionMode="Multiple"
@@ -181,11 +181,11 @@
     <Border Grid.Row="2"
             VerticalAlignment="Top"
             BorderThickness="20,10,20,30"
-            BorderBrush="White"
+            BorderBrush="{DynamicResource ThemeBackgroundBrush}"
             IsVisible="{Binding IsChecked, ElementName=toggleGroupOptionsButton}">
       <StackPanel Orientation="Vertical">
         <!--Regular Plugins-->
-        <ItemsControl Items="{Binding GroupChatPlugins}" Background="White">
+        <ItemsControl Items="{Binding GroupChatPlugins}" Background="{DynamicResource ThemeBackgroundBrush}">
           <ItemsControl.ItemTemplate>
             <DataTemplate>
               <Button
@@ -194,24 +194,23 @@
                                          AncestorType={x:Type controls:GroupContentsControl}}, Path=DataContext.GroupChatPluginActivated}"
                   CommandParameter="{Binding Path=.}"
                   HorizontalContentAlignment="Left"
-                  Foreground="#414A59"
+                  Foreground="{DynamicResource PluginButtonFontBrush}"
                   BorderThickness="0"
                   FontSize="14"
-                  FontWeight="SemiBold"
-                  Margin="5">
+                  FontWeight="SemiBold">
               </Button>
             </DataTemplate>
           </ItemsControl.ItemTemplate>
 
           <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
-              <StackPanel />
+              <StackPanel Spacing="5,5,5,5"/>
             </ItemsPanelTemplate>
           </ItemsControl.ItemsPanel>
         </ItemsControl>
 
         <!--Cache Plugins-->
-        <ItemsControl Items="{Binding GroupChatCachePlugins}" Background="White">
+        <ItemsControl Items="{Binding GroupChatCachePlugins}" Background="{DynamicResource ThemeBackgroundBrush}">
           <ItemsControl.ItemTemplate>
             <DataTemplate>
               <Button
@@ -220,11 +219,10 @@
                                          AncestorType={x:Type controls:GroupContentsControl}}, Path=DataContext.GroupChatCachePluginActivated}"
                   CommandParameter="{Binding Path=.}"
                   HorizontalContentAlignment="Left"
-                  Foreground="#414A59"
+                  Foreground="{DynamicResource PluginButtonFontBrush}"
                   BorderThickness="0"
                   FontSize="14"
-                  FontWeight="SemiBold"
-                  Margin="5">
+                  FontWeight="SemiBold">
 
               </Button>
             </DataTemplate>
@@ -232,7 +230,7 @@
 
           <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
-              <StackPanel />
+              <StackPanel Spacing="5,5,5,5"/>
             </ItemsPanelTemplate>
           </ItemsControl.ItemsPanel>
         </ItemsControl>
@@ -241,7 +239,7 @@
 
     <!--Send Message Bar-->
     <Grid Grid.Row="3"
-          Background="White"
+          Background="{DynamicResource ThemeBackgroundBrush}"
           ColumnDefinitions="40,*,Auto,Auto"
           RowDefinitions="*, Auto">
       <!--<Grid.RowDefinitions>
@@ -251,7 +249,8 @@
 
       <!--Send Bar Top Line-->
       <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4"
-              BorderBrush="#637182" BorderThickness="0,0,0,1"
+              BorderBrush="{DynamicResource DividerLineBrush}" 
+              BorderThickness="0,0,0,1"
               Height="4"
               Margin="0,0,0,0"
               VerticalAlignment="Bottom"/>
