--- a/GroupMeClientAvalonia/Views/Controls/GroupControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/GroupControl.xaml
@@ -7,7 +7,6 @@
              xmlns:converters="clr-namespace:GroupMeClientAvalonia.Converters"
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-             xmlns:html="clr-namespace:Avalonia.Controls.Html"
              FontFamily="Segoe UI"
              mc:Ignorable="d" d:DesignWidth="350" d:DesignHeight="150">
 
@@ -20,7 +19,7 @@
   <Grid ColumnDefinitions="80,185,60"
         RowDefinitions="Auto, *"
         Margin="0,15,15,0"
-        Background="White">
+        Background="{DynamicResource ThemeBackgroundBrush}">
 
     <controls:AvatarControl
             Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
@@ -45,16 +44,16 @@
                Grid.Column="2" Grid.Row="0" 
                HorizontalAlignment="Right"  VerticalAlignment="Center" 
                FontSize="14" 
-               Foreground="#637182"/>
+               Foreground="{DynamicResource GroupsSidebarFontBrush}"/>
 
     <!--TextTrimming="CharacterEllipsis"-->
-    <TextBlock  Grid.Column="1" Grid.Row="2" 
-                HorizontalAlignment="Left" VerticalAlignment="Center"
-                Height="40" 
-                FontSize="13" 
-                Foreground="#637182"
-                TextWrapping="Wrap"
-                Text="{Binding QuickPreview}"/>
+    <TextBlock Grid.Column="1" Grid.Row="2" 
+               HorizontalAlignment="Left" VerticalAlignment="Center"
+               Height="40" 
+               FontSize="13" 
+               Foreground="{DynamicResource GroupsSidebarFontBrush}"
+               TextWrapping="Wrap"
+               Text="{Binding QuickPreview}"/>
 
     <!--Padding="0,7,0,0"-->
     <TextBlock Grid.Column="2" Grid.Row="1"
