--- a/GroupMeClientAvalonia/Views/Controls/MessageControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/MessageControl.xaml
@@ -42,7 +42,7 @@
     </controls:AvatarControl>
 
     <StackPanel Grid.Column="1" Grid.Row="1">
-      <TextBlock Text="{Binding Sender}" FontSize="12" Foreground="#637182" />
+      <TextBlock Text="{Binding Sender}" FontSize="12" Foreground="{DynamicResource MessageFontBrush}" />
 
       <ItemsControl Items="{Binding AttachedItems}">
         <ItemsControl.ItemTemplate>
@@ -104,7 +104,8 @@
                  HorizontalAlignment="Center"
                  ClipToBounds="False"
                  Margin="2,0,0,0"
-                 Foreground="#637182" FontSize="10" FontWeight="Thin"
+                 Foreground="{DynamicResource MessageFontBrush}" 
+                 FontSize="10" FontWeight="Thin"
                  Text="{Binding LikeCount}" />  
 
       <i:Interaction.Behaviors>
@@ -148,7 +149,8 @@
 
       <Grid Width="{Binding $parent[Canvas].Bounds.Width}">
         <Border BorderThickness="1" CornerRadius="5"
-                BorderBrush="#637182" Background="#F7F7F7"
+                BorderBrush="{DynamicResource MessageFontBrush}" 
+                Background="{DynamicResource MessageBackdropBrush}"
                 Height="65" HorizontalAlignment="Right"
                 IsVisible="False"
                 x:Name="likesBubble">
@@ -175,21 +177,21 @@
 
     <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3"
                 Orientation="Vertical"
-                Background="LightGray"
+                Background="{DynamicResource MessageDetailsBrush}"
                 Height="45"
                 IsVisible="{Binding ShowDetails}">
 
       <TextBlock Text="{Binding SentTimeString, StringFormat=Sent: \{0\}}"
                  FontWeight="Regular"
                  FontSize="11"
-                 Foreground="#637182"
+                 Foreground="{DynamicResource MessageFontBrush}"
                  Margin="20,0,0,0" />
 
       <TextBlock Text="{Binding SenderPlatform, StringFormat=Client: \{0\}}"
                  FontWeight="Regular"
                  FontSize="11"
                  Margin="20,0,0,0"
-                 Foreground="#637182" />
+                 Foreground="{DynamicResource MessageFontBrush}" />
     </StackPanel>
   </Grid>
 </UserControl>
