--- a/GroupMeClientAvalonia/GroupMeLight.xaml
+++ b/GroupMeClientAvalonia/GroupMeLight.xaml
@@ -11,15 +11,17 @@
     <Color x:Key="MessageDetailsColor">#FFD3D3D3</Color>
     <Color x:Key="DividerLineColor">#637182</Color>
     <Color x:Key="PluginButtonFontBrush">#414A59</Color>
-    
-    <SolidColorBrush x:Key="LoadingSpinnerDarkBrush" Color="{DynamicResource LoadingSpinnerDarkColor}"></SolidColorBrush>
-    <SolidColorBrush x:Key="MenuButtonLightBrush" Color="{DynamicResource MenuButtonLightColor}"></SolidColorBrush>
-    <SolidColorBrush x:Key="MessageBackdropBrush" Color="{DynamicResource MessageBackdropColor}"></SolidColorBrush>
-    <SolidColorBrush x:Key="GroupsSidebarFontBrush" Color="{DynamicResource GroupsSidebarFontColor}"></SolidColorBrush>
-    <SolidColorBrush x:Key="MessageFontBrush" Color="{DynamicResource MessageFontColor}"></SolidColorBrush>
-    <SolidColorBrush x:Key="MessageDetailsBrush" Color="{DynamicResource MessageDetailsColor}"></SolidColorBrush>
-    <SolidColorBrush x:Key="DividerLineBrush" Color="{DynamicResource DividerLineColor}"></SolidColorBrush>
-    <SolidColorBrush x:Key="PluginButtonFontColor" Color="{DynamicResource PluginButtonFontBrush}"></SolidColorBrush>
+    <Color x:Key="UnreadBubbleForegroundColor">#FFFFFF</Color>
+
+    <SolidColorBrush x:Key="LoadingSpinnerDarkBrush" Color="{DynamicResource LoadingSpinnerDarkColor}"/>
+    <SolidColorBrush x:Key="MenuButtonLightBrush" Color="{DynamicResource MenuButtonLightColor}"/>
+    <SolidColorBrush x:Key="MessageBackdropBrush" Color="{DynamicResource MessageBackdropColor}"/>
+    <SolidColorBrush x:Key="GroupsSidebarFontBrush" Color="{DynamicResource GroupsSidebarFontColor}"/>
+    <SolidColorBrush x:Key="MessageFontBrush" Color="{DynamicResource MessageFontColor}"/>
+    <SolidColorBrush x:Key="MessageDetailsBrush" Color="{DynamicResource MessageDetailsColor}"/>
+    <SolidColorBrush x:Key="DividerLineBrush" Color="{DynamicResource DividerLineColor}"/>
+    <SolidColorBrush x:Key="PluginButtonFontColor" Color="{DynamicResource PluginButtonFontBrush}"/>
+    <SolidColorBrush x:Key="UnreadBubbleForegroundBrush" Color="{DynamicResource UnreadBubbleForegroundColor}"/>
   </Style.Resources>
 </Style>
 
