--- a/GroupMeClientAvalonia/Views/Controls/GroupControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/GroupControl.xaml
@@ -38,6 +38,12 @@
           <ia:ChangePropertyAction TargetObject="{Binding #TitleTextBlock}" PropertyName="FontWeight" Value="SemiBold"/>
         </ia:DataTriggerBehavior>
       </i:Interaction.Behaviors>
+
+      <i:Interaction.Behaviors>
+        <ia:DataTriggerBehavior Binding="{Binding TotalUnreadCount}" ComparisonCondition="Equal" Value="0">
+          <ia:ChangePropertyAction TargetObject="{Binding #TitleTextBlock}" PropertyName="FontWeight" Value="Regular"/>
+        </ia:DataTriggerBehavior>
+      </i:Interaction.Behaviors>
     </TextBlock>
 
     <TextBlock Text="{Binding LastUpdatedFriendlyTime}" 
@@ -55,28 +61,32 @@
                TextWrapping="Wrap"
                Text="{Binding QuickPreview}"/>
 
-    <!--Padding="0,7,0,0"-->
-    <TextBlock Grid.Column="2" Grid.Row="1"
-               HorizontalAlignment="Right"
-               VerticalAlignment="Top"
-               TextAlignment="Center"
-               Height="30"
-               Width="30"
-               Text="{Binding TotalUnreadCount}"
-               Foreground="White"
-               FontWeight="Bold"
-               Name="UnreadBubble">
+    <Border Grid.Column="2" Grid.Row="1"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Height="30"
+            Width="30"
+            Name="UnreadBubble"
+            Padding="0,7,0,0">
 
-      <i:Interaction.Behaviors>
-        <ia:DataTriggerBehavior Binding="{Binding TotalUnreadCount}" ComparisonCondition="GreaterThan" Value="0">
-          <ia:ChangePropertyAction TargetObject="{Binding #UnreadBubble}" PropertyName="IsVisible" Value="True"/>
-        </ia:DataTriggerBehavior>
-        <ia:DataTriggerBehavior Binding="{Binding TotalUnreadCount}" ComparisonCondition="Equal" Value="0">
-          <ia:ChangePropertyAction TargetObject="{Binding #UnreadBubble}" PropertyName="IsVisible" Value="False"/>
-        </ia:DataTriggerBehavior>
-      </i:Interaction.Behaviors>
+      <TextBlock Grid.Column="2" Grid.Row="1"
+              HorizontalAlignment="Center"
+              VerticalAlignment="Top"
+              TextAlignment="Center"
+              Text="{Binding TotalUnreadCount}"
+              Foreground="{DynamicResource UnreadBubbleForegroundBrush}"
+              FontWeight="Bold"/>
 
-      <TextBlock.Background>
+        <i:Interaction.Behaviors>
+          <ia:DataTriggerBehavior Binding="{Binding TotalUnreadCount}" ComparisonCondition="GreaterThan" Value="0">
+            <ia:ChangePropertyAction TargetObject="{Binding #UnreadBubble}" PropertyName="IsVisible" Value="True"/>
+          </ia:DataTriggerBehavior>
+          <ia:DataTriggerBehavior Binding="{Binding TotalUnreadCount}" ComparisonCondition="Equal" Value="0">
+            <ia:ChangePropertyAction TargetObject="{Binding #UnreadBubble}" PropertyName="IsVisible" Value="False"/>
+          </ia:DataTriggerBehavior>
+        </i:Interaction.Behaviors>
+
+      <Border.Background>
         <VisualBrush>
           <VisualBrush.Visual>
             <Ellipse Height="30"
@@ -84,7 +94,8 @@
                      Fill="#1873BA" />
           </VisualBrush.Visual>
         </VisualBrush>
-      </TextBlock.Background>
-    </TextBlock>
+      </Border.Background>
+    </Border>
+   
   </Grid>
 </UserControl>
