Added support for sending messages

--- a/GroupMeClientAvalonia/App.xaml
+++ b/GroupMeClientAvalonia/App.xaml
@@ -30,13 +30,17 @@
   </Application.Resources>
 
     <Application.Styles>
-        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
-        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
+      <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+      <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
       
-        <StyleInclude Source="avares://GroupMeClientAvalonia/HamburgerMenu.xaml"/>
-        <StyleInclude Source="avares://MicroCubeAvalonia/DefaultTheme.xaml"/>
+      <StyleInclude Source="avares://GroupMeClientAvalonia/HamburgerMenu.xaml"/>
+      <StyleInclude Source="avares://MicroCubeAvalonia/DefaultTheme.xaml"/>
 
       <StyleInclude Source="avares://GroupMeClientAvalonia/GroupMeLight.xaml"/>
+
+      <Style Selector="TextBox.verticalCenter /template/ Panel">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+      </Style>
       
     </Application.Styles>
 </Application>
